--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -39,7 +39,7 @@ $title = $block->getData('title');
   class="contents"
 >
   <div
-    class="flex flex-col gap-5 rounded-md p-5 <?= $isCartPage ? '' : 'md:w-[--minicart-width]' ?> md:gap-0  md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
+      class="flex flex-col gap-5 rounded-md p-5 <?= $isCartPage ? '' : 'md:w-[--minicart-width] bg-bg-500' ?> md:gap-0 md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
   >
     <div
       class="flex items-center justify-between md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $isCartPage ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6 sticky top-0 z-10' ?>"
