--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/edit.phtml
@@ -18,6 +18,8 @@ use Hyva\Theme\ViewModel\SvgIcons;
 // Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
 // on the Magento_ReCaptchaCustomer module
 $recaptcha = $block->getData('viewModelRecaptcha');
+$recaptchaFailedMessage = __('ReCAPTCHA validation failed. Please try again.');
+$recaptchaSystemErrorMessage = __('Something went wrong with reCAPTCHA. Please contact the store owner.');
 $hyvaicons = $viewModels->require(SvgIcons::class);
 $minimumPasswordLength = $block->getMinimumPasswordLength();
 $passwordMinCharacterSets = $block->getRequiredCharacterClassesNumber();
@@ -34,19 +36,25 @@ $errorMessage = $block->getErrorMessage();
         <?= $escaper->escapeHtml(__('Account Information')) ?>
     </h2>
 
-    <form id="form-validate"
-          action="<?= $escaper->escapeUrl($block->getUrl('customer/account/editPost')) ?>"
-          method="post"
-          enctype="multipart/form-data"
-          x-data="Object.assign(hyva.formValidation($el),
-              AccountInformation(
-                  '<?= $escaper->escapeJS($recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '') ?>',
-                  <?= $isChangingEmail ? 'true' : 'false' ?>,
-                  <?= ($isChangingPassword || $block->getChangePassword()) ? 'true' : 'false' ?>,
-              ),
-          )"
-          @submit.prevent="submitForm(event)"
-          autocomplete="off"
+  <!-- $form is used in recaptcha validation, and declared in x-init for scope -->
+  <form x-init="$form = $el"
+        id="form-validate"
+        action="<?= $escaper->escapeUrl($block->getUrl('customer/account/editPost')) ?>"
+        method="post"
+        enctype="multipart/form-data"
+        x-data="Object.assign(hyva.formValidation($el),
+            AccountInformation(
+                () => { <?= $escaper->escapeHtmlAttr($recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '') ?> },
+                Boolean(<?= $recaptcha ? $recaptcha->isCaptchaEnabledFor(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '' ?>),
+                '<?= $recaptcha ? $recaptcha->getSelectedTypeForForm(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) : '' ?>',
+                '<?= $recaptchaFailedMessage ?>',
+                '<?= $recaptchaSystemErrorMessage ?>',
+                <?= $isChangingEmail ? 'true' : 'false' ?>,
+                <?= ($isChangingPassword || $block->getChangePassword()) ? 'true' : 'false' ?>,
+            ),
+        )"
+        @submit.prevent="submitForm(event)"
+        autocomplete="off"
     >
         <?php if ($successMessage): ?>
             <div class="text-green-700 -mt-3 mb-3">
@@ -239,7 +247,7 @@ $errorMessage = $block->getErrorMessage();
         <?php if ($recaptcha): ?>
             <div class="mt-3">
                 <?= $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_EDIT) ?>
-                <p class="text-red-500 mt-1" x-text="recaptchaError" v-show="Boolean(recaptchaError)"></p>
+              <p class="text-red-500 mt-1" x-text="recaptchaErrorMessage" v-show="Boolean(recaptchaErrorMessage)"></p>
             </div>
         <?php endif; ?>
 
