--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -67,7 +67,9 @@ $mixBackground = true;
               <?= $template->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
             </div>
           </div>
-          <div class="flex min-w-0 flex-col items-stretch justify-center gap-5 <?= $isCartPage ? 'md:gap-0' : '' ?>">
+          <div
+              class="flex min-w-0 flex-col items-stretch justify-center gap-5 <?= $isCartPage ? 'md:gap-0' : '' ?> z-10"
+          >
             <div class="w-full">
               <h2 class="text-md text-text-500">
                 <span x-text="item.product_name"></span>
