--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_card.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_card.scss
@@ -1,3 +1,3 @@
 .card-hover {
-  @apply relative cursor-pointer before:absolute before:-inset-3  before:-z-10 before:size-[calc(100%+16px)] before:overflow-hidden before:rounded-2xl before:bg-bg-600 before:p-3 before:opacity-0 before:transition-opacity before:duration-200 before:content-[''] md:hover:before:opacity-100;
+  @apply relative cursor-pointer before:absolute before:-inset-3 before:size-[calc(100%+16px)] before:overflow-hidden before:rounded-2xl before:bg-bg-600 before:p-3 before:opacity-0 before:transition-opacity before:duration-200 before:content-[''] md:hover:before:opacity-100;
 }
