--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -81,7 +81,7 @@ $cartItemsCount = $cart->getCartItemsQty();
     </div>
     <div class="contents md:flex md:flex-grow md:justify-end">
       <div
-        class="col-start-5 transition-all md:flex md:items-center"
+          class="col-start-5 transition-all md:flex md:items-center z-10"
         :class="{ 'md:drop-shadow-lg': $store.main.isHeaderShadowVisible }"
       >
         <?=
