--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/templates/advanced/form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/templates/advanced/form.phtml
@@ -18,7 +18,11 @@ $maxQueryLength = $catalogSearchHelper->getMaxQueryLength();
           tabindex="-1"><?= $escaper->escapeHtml(__('Search Settings')) ?></h2>
     </header>
 
-    <form action="<?= $escaper->escapeUrl($block->getSearchPostUrl()) ?>" method="get">
+    <form method="get"
+          action="<?= $escaper->escapeUrl($block->getSearchPostUrl()) ?>"
+          @submit.prevent="submitForm"
+          x-data="AdvancedSearch"
+    >
       <div class="flex flex-col gap-3">
           <?php foreach ($block->getSearchableAttributes() as $attribute): ?>
               <?php $code = $attribute->getAttributeCode() ?>
@@ -52,10 +56,16 @@ $maxQueryLength = $catalogSearchHelper->getMaxQueryLength();
 
       <div class="flex flex-col gap-6 mt-7">
         <button class="button button--filled-primary"
+                :class="isLoading && 'button--disabled'"
+                :disabled="isLoading"
                 type="submit"
                 title="<?= $escaper->escapeHtml(__('Search')) ?>"
         >
-          <span><?= $escaper->escapeHtml(__('Search')) ?></span>
+          <span x-text="isLoading ?
+              '<?= $escaper->escapeHtml(__('Searching...')) ?>' :
+              '<?= $escaper->escapeHtml(__('Search')) ?>'">
+              <?= $escaper->escapeHtml(__('Search')) ?>
+          </span>
         </button>
       </div>
     </form>
