--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
@@ -66,6 +66,10 @@ input[type="search"] {
   }
 }
 
+.field-success .messages {
+  @apply text-green-700;
+}
+
 .field-error .messages {
-    @apply text-red-500;
+  @apply text-red-500;
 }
