INTERNAL-384: Optimize registration & supuport recaptcha

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
@@ -66,10 +66,23 @@ input[type="search"] {
   }
 }
 
-.field-success .messages {
-  @apply text-green-700;
-}
+.field {
+  &-success {
+    .messages {
+      @apply text-green-700;
+    }
+  }
 
-.field-error .messages {
-  @apply text-red-500;
+  &-error {
+    .messages {
+      @apply text-red-500;
+    }
+  }
+
+  &-success,
+  &-error {
+    a {
+      @apply border-b-1 border-current;
+    }
+  }
 }
